--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "element-ui": "^2.0.8",
-    "normalize.css": "^7.0.0",
+    "jszip": "^3.1.4",
+    "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.0.2",
+    "vue-quill-editor": "^3.0.4",
+    "vue-router": "^3.0.1",
+    "vue-schart": "^0.1.4",
+    "xlsx": "^0.10.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
